--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 .env
+# .dockerignore
+.git
+.gitignore
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.env
+.env.example
+*.md
+.DS_Store
+.docker/
+docker-compose*.yml
+Dockerfile*
+.dockerignore
+tests/
+.coverage
+htmlcov/
+.pytest_cache/
+.github/
