Ready for deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3.8'
 
 services:
-  web:
+  flask-app:
     build: .
     ports:
       - "5000:5000"
+    environment:
+      - FLASK_APP=run.py
+      - FLASK_DEBUG=0
+      - SECRET_KEY=${SECRET_KEY}
     volumes:
       - .:/app
-    environment:
-      - FLASK_ENV=development
-      - FLASK_APP=wsgi.py
