--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,28 +35,29 @@ jobs:
 
     - name: Deploy to EC2
       env:
-        PRIVATE_KEY: ${{ secrets.AWS_SSH_KEY }}
+        PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
         HOST: ${{ secrets.AWS_EC2_HOST }}
         USER: ec2-user
       run: |
+        # Save private key to file
         echo "$PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
         
+        # Debug SSH connection (remove in production)
+        ssh -v -i private_key.pem -o StrictHostKeyChecking=no ${USER}@${HOST} 'echo "SSH connection successful"'
+        
         # Deploy new version
-        ssh -i private_key.pem -o StrictHostKeyChecking=no ${USER}@${HOST} '
-          # Login to ECR
+        ssh -i private_key.pem -o StrictHostKeyChecking=no ${USER}@${HOST} "
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
           
-          # Stop existing container
           docker stop flask-app || true
           docker rm flask-app || true
           
-          # Pull and run new image
           docker pull ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
           docker run -d \
             --name flask-app \
             -p 5000:5000 \
             ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
-        '
+        "
         
         rm private_key.pem
